增强redis版本的布隆过滤器方法